--- a/final-cra/package.json
+++ b/final-cra/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
