--- a/final-cra/package.json
+++ b/final-cra/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar": "^8.8.1",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
