--- a/final-cra/package.json
+++ b/final-cra/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "smooth-scrollbar": "^8.8.1",
     "styled-components": "^5.3.8",
+    "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
