--- a/final-cra/package.json
+++ b/final-cra/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.17.2",
-    "prettier-eslint": "^15.0.1",
     "gsap": "^3.11.4",
+    "prettier-eslint": "^15.0.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
